--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "baseUrl": "http://0.0.0.0:4200"
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
